Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I am a husband, cat dad, musician and all-around friendly dude. Oh yeah, and I'm learning to code! </p>
